--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
